--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.application.name=telegram
+spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
+spring.datasource.username= postgres
+spring.datasource.password= Geckon@123
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+#logging.level.org.hibernate.SQL=DEBUG
+spring.profiles.active=profile1
+# Custom Settings
+image.path = images
+spring.liquibase.change-log=classpath:liquibase/changelog/changelog-master.yml
 telegram.bot.token=
