CourseTwo Telegram-Bot (prosto_studia_bot)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=telegram
-spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
+spring.datasource.url= jdbc:postgresql://localhost:5432/telegram
 spring.datasource.username= postgres
 spring.datasource.password= Geckon@123
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
@@ -11,4 +11,4 @@ spring.profiles.active=profile1
 # Custom Settings
 image.path = images
 spring.liquibase.change-log=classpath:liquibase/changelog/changelog-master.yml
-telegram.bot.token=
+telegram.bot.token=7639672328:AAHGTzQzQIL9j7Fz-rPSE_vqRksrCIPbAzA
