--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>4.20.0</version>
+					<configuration>
+					<changeLogFile>src/main/resources/liquibase/changelog/changelog-master.yml</changeLogFile>
+					<url>jdbc:postgresql://localhost:5432/telegram</url>
+					<username>postgres</username>
+					<password>Geckon@123</password>
+					<driver>org.postgresql.Driver</driver>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
