--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,8 @@ spring.datasource.password= Geckon@123
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= validate
 #logging.level.org.hibernate.SQL=DEBUG
-spring.profiles.active=profile1
 # Custom Settings
 image.path = images
 spring.liquibase.change-log=classpath:liquibase/changelog/changelog-master.yml
